# offtrack-brain

./: .gitmodules
bags/reversed/: metadata.yaml
bags/trajectory/: metadata.yaml
brain/config/: config.rviz
brain/launch/: launch.py
cev/cev_offtrack_planner_ros2/: CMakeLists.txt  package.xml
cev/cev_offtrack_planner_ros2/launch/: launch.py
cev/cev_offtrack_planner_ros2/src/: planner_node.cpp
cev/cev_sim_trajectory_follower_ros2/: CMakeLists.txt  package.xml
